# autonitia-intel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
autonitia_intel/: __init__.py  cli.py  config.py  models.py  usage.py
autonitia_intel/detection/: __init__.py  capabilities.py  fingerprints.py
autonitia_intel/fetchers/: __init__.py  fetcher.py  robots.py
autonitia_intel/graph/: __init__.py  base_graph.py  base_node.py  profile_graph.py
autonitia_intel/lenses/: __init__.py  catalog.py
autonitia_intel/nodes/: __init__.py  basic_assemble_node.py  fact_extraction_node.py  fetch_node.py  markdownify_node.py  positive_detection_node.py  repair_extraction_node.py
autonitia_intel/signal_packs/industries/: real_estate.yaml
autonitia_intel/signal_packs/lenses/: automation.yaml  marketing.yaml  sales.yaml
autonitia_intel/telemetry/: __init__.py  telemetry.py
examples/: analyze_example.py
tests/: test_catalog.py  test_detection.py  test_fetch.py  test_graph.py  test_integration.py
