[project]
name = "autonitia-intel"
version = "0.2.1"
description = "Turn any business website into a clean, structured company profile — a graph-based extraction engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Syed Mukarramuddin" }]
keywords = ["web-scraping", "llm", "company-data", "lead-generation", "openai", "extraction", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openai>=1.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Autonitia/autonitia-intel"
Repository = "https://github.com/Autonitia/autonitia-intel"

[project.scripts]
autonitia-intel = "autonitia_intel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autonitia_intel*"]

[tool.setuptools.package-data]
autonitia_intel = ["signal_packs/**/*.yaml"]
